--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.359.0",
+    "moment-timezone": "^0.5.45",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
