--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns-tz": "^2.0.1",
     "lucide-react": "^0.359.0",
     "moment-timezone": "^0.5.45",
     "next": "14.1.4",
